@@ -1,0 +1,4 @@
+# root's .bash_logout:
+
+# clear screen for security:
+clear
