@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # Copyright 2009-2010 Funtoo Technologies.
 
+*baselayout-2.1.8-r1 (20 Oct 2010)
+
+  20 Oct 2010; Daniel Robbins <drobbins@funtoo.org>
+  +baselayout-2.1.8-r1.ebuild: New ebuild with /root/.bash_logout that clears
+  the screen for security enhancement.
+
 *baselayout-2.1.8 (17 Aug 2010)
 
   17 Aug 2010; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.1.8.ebuild:
